--- a/view_details1.html
+++ b/view_details1.html
@@ -140,8 +140,8 @@
             <div class="box">
                 <h3>extra links</h3>
                 <a href="create_profile.html"><i class="fas fa-angle-right"></i>account</a>
-                <a href="login.html"><i class="fas fa-angle-right"></i>login</a>
-                <a href="login.html"><i class="fas fa-angle-right"></i>register</a>
+                <a href="index.html"><i class="fas fa-angle-right"></i>login</a>
+                <a href="index.html"><i class="fas fa-angle-right"></i>register</a>
                 <a href="job_list.html"><i class="fas fa-angle-right"></i>filter search</a>
             </div>
 
